# pi-codemcp

./: .editorconfig  .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  EFFICIENCY_REVIEW.md  README.md  biome.json  justfile  package.json  prek.toml  release-please-config.json  tsconfig.json  ty.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: quality.yml  release.yml
docs/: execution-failure-reduction-micro-spec.md  qol-prompt-eval.md
docs/eval-results/: qol-live-sol.json  qol-live-terra.json  qol-prompt-sol.json  qol-prompt-terra.json
eval/: qol-bench-server.py  qol-live-replay.ts  qol-prompt-replay.ts
extensions/: index.ts
sidecar/: __init__.py  catalog_cache.py  chains.py  cli.py  executor.py  gateway.py  json_types.py  mcp_config.py  models.py  pyproject.toml  refinement_cache.py  ruff.toml  runtime_paths.py  sandbox_api.py  schemas.py  settings.py  stats.py  tool_catalog.py
src/: chains.ts  config.ts  errors.ts  execution-rendering.ts  json-file.ts  lifecycle.ts  mcp-client.ts  modal.ts  output.ts  prompts.ts  settings.ts  tools.ts
tests/fixtures/: prompt-replay.json  upstream_server.py
tests/python/: test_cli.py  test_executor.py  test_gateway.py  test_refinement_cache.py  test_schemas.py  test_settings.py  test_stats.py
tests/release/: package-smoke.ts
tests/typescript/: chains.test.ts  config.test.ts  extension.test.ts  mcp-client.test.ts  modal.test.ts  output.test.ts  prompts.test.ts  rendering.test.ts  settings.test.ts  tools.test.ts
