[project]
name = "pi-codemcp-sidecar"
version = "0.1.0"
description = "Python sidecar for pi-codemcp"
requires-python = ">=3.13"
dependencies = [
  "fastmcp==3.4.4",
  "httpx==0.28.1",
  "pydantic==2.13.4",
  "pydantic-monty==0.0.18",
  "py-key-value-aio[filetree,pydantic]==0.4.5",
  "rapidfuzz==3.14.5",
]

[dependency-groups]
dev = [
  "mypy==2.3.0",
  "prek==0.4.10",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "ruff==0.16.0",
  "ty==0.0.63",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".."]

[tool.ruff]
required-version = "==0.15.22"
target-version = "py313"
line-length = 100
src = ["sidecar"]
preview = true
force-exclude = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "missing-trailing-comma", # Conflicts with the formatter.
  "missing-copyright-notice", # Legal copyright text is not configured.
  "undocumented-public-module",   # Internal modules do not need module docstrings.
  "undocumented-public-class",   # Pydantic catalog models are self-describing.
  "undocumented-public-method",   # Internal methods are covered by types and focused class documentation.
  "undocumented-public-function",   # Internal functions are covered by types and focused module documentation.
  "undocumented-public-package",   # Internal packages do not need package docstrings beyond sidecar/__init__.py.
  "undocumented-magic-method",   # Magic methods do not need docstrings.
  "undocumented-public-init",   # Constructor contracts are expressed by typed fields.
  "incorrect-blank-line-before-class",   # Incompatible with D211.
  "multi-line-summary-second-line",   # Incompatible with D212.
  "docstring-missing-returns", # Return types are explicit and checked.
  "docstring-missing-exception", # Repeating raised exception types in docstrings reduces readability.
  "raw-string-in-exception",  # Inline exception messages are clearer at the failure site.
  "f-string-in-exception",  # Inline contextual exception messages are clearer at the failure site.
  "boolean-type-hint-positional-argument", # JSON Schema itself may be boolean; these are not boolean control arguments.
  "raise-vanilla-args", # Custom exception wrappers would obscure concise boundary failures.
]

[tool.ruff.lint.isort]
known-first-party = ["sidecar"]

[tool.ruff.lint.mccabe]
# JSON Schema compilation and execution-state handling are branch-heavy by nature.
max-complexity = 20

[tool.ruff.lint.pylint]
max-args = 8
max-bool-expr = 5
max-branches = 20
max-locals = 25
max-nested-blocks = 4
max-positional-args = 6
max-public-methods = 10
max-returns = 16
max-statements = 50
max-statements-in-try = 4

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "ANN",
  "D",
  "magic-value-comparison",
  "assert",
  "hardcoded-password-string",
  "hardcoded-password-func-arg",
  "private-member-access",
]
"tests/fixtures/**/*.py" = ["print"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
strict = true
files = ["sidecar", "tests/python"]
pretty = true
show_error_codes = true
show_error_code_links = true
show_error_context = true
show_error_end = true
strict_bytes = true
strict_equality_for_none = true
warn_unreachable = true
warn_unused_configs = true
enable_error_code = [
  "deprecated",
  "exhaustive-match",
  "explicit-override",
  "ignore-without-code",
  "mutable-override",
  "possibly-undefined",
  "redundant-expr",
  "truthy-bool",
  "truthy-iterable",
  "unimported-reveal",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ty.rules]
all = "error"

[tool.ty.analysis]
respect-type-ignore-comments = false

[tool.ty.terminal]
error-on-warning = true

[tool.uv]
package = false
